<resources>
    <string name="app_name">AutoIntegrate</string>
    <string name="service_notification_title">AutoIntegrate</string>
    <string name="title_activity_main">AutoIntegrate</string>
    <string name="ACTION_STOP_SERVICE">com.arksine.autointegrate.ACTION_STOP_SERVICE</string>
    <string name="ACTION_WAKE_DEVICE">com.arksine.autointegrate.ACTION_WAKE_DEVICE</string>
    <string name="ACTION_SUSPEND_DEVICE">com.arksine.autointegrate.ACTION_SUSPEND_DEVICE</string>
    <string name="ACTION_REFRESH_SERVICE_THREAD">com.arksine.autointegrate.ACTION_REFRESH_SERVICE_THREAD</string>
    <string name="ACTION_REFRESH_CONTROLLER_CONNECTION">com.arksine.autointegrate.ACTION_REFRESH_CONTROLLER_CONNECTION</string>
    <string name="ACTION_REFRESH_RADIO_CONNECTION">com.arksine.autointegrate.ACTION_REFRESH_RADIO_CONNECTION</string>
    <string name="ACTION_STATUS_TOGGLE_CHANGED">com.arksine.autointegrate.ACTION_STATUS_TOGGLE_CHANGED</string>
    <string name="ACTION_SERVICE_STATUS_CHANGED">com.arksine.autointegrate.ACTION_SERVER_STATUS_CHANGED</string>
    <string name="ACTION_DEVICE_CHANGED">com.arksine.autointegrate.ACTION_DEVICE_CHANGED</string>
    <string name="ACTION_DEVICE_DISCONNECTED">com.arksine.autointegrate.ACTION_DEVICE_DISCONNECTED</string>
    <string name="ACTION_CONTROLLER_LEARN_DATA">com.arksine.autointegrate.ACTION_CONTROLLER_LEARN_DATA</string>
    <string name="ACTION_BT_ADAPTER_ON">com.arksine.autointegrate.ACTION_BT_ADAPTER_ON</string>
    <string name="ACTION_CUSTOM_MCU_COMMAND">com.arksine.autointegrate.ACTION_CUSTOM_MCU_COMMAND</string>
    <string name="ACTION_CUSTOM_DATA_RECIEVED">com.arksine.autointegrate.ACTION_CUSTOM_DATA_RECIEVED"</string>
    <string name="EXTRA_COMMAND">com.arksine.autointegrate.EXTRA_COMMAND</string>
    <string name="EXTRA_DATA">com.arksine.autointegrate.EXTRA_DATA</string>
    <string name="EXTRA_OPERATION">com.arksine.autointegrate.EXTRA_OPERATION</string>
    <string name="ACTION_SEND_RADIO_COMMAND">com.arksine.autointegrate.ACTION_SEND_RADIO_COMMAND</string>
    <string name="ACTION_RADIO_DATA_REFRESHED">com.arksine.autointegrate.ACTION_RADIO_DATA_REFRESHED</string>
    <string name="ACTION_USB_PERMISSION">com.arksine.autointegrate.USB_PERMISSION</string>
    <string name="ACTION_USB_ATTACHED">android.hardware.usb.action.USB_DEVICE_ATTACHED</string>
    <string name="ACTION_USB_DETACHED">android.hardware.usb.action.USB_DEVICE_DETACHED</string>
    <string name="LAUNCH_CAMERA_EXTRA">com.arksine.autointegrate.LAUNCH_CAMERA_EXTRA</string>
    <string name="ACTION_CLOSE_CAMERA">com.arksine.autointegrate.ACTTION_CLOSE_CAMERA</string>
    <string name="gson_button_list_file">com.arksine.autointegrate.GSON_BUTTON_LIST_FILE</string>
    <string-array name="drawer_setting_titles">
        <item>Main Settings</item>
        <item>Power Settings</item>
        <item>Controller Settings</item>
        <item>Camera Settings</item>
        <item>HD Radio Settings</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="main_pref_toggle_service">Toggle Service</string>
    <string name="main_pref_toggle_service_summ_on">AutoIntegrate Service is ON</string>
    <string name="main_pref_toggle_service_summ_off">AutoIntegrate Service is OFF</string>
    <string name="main_pref_toggle_power">Power Management</string>
    <string name="main_pref_toggle_power_summ_on">Power Management Integration ENABLED</string>
    <string name="main_pref_toggle_power_summ_off">Power Management Integration DISABLED</string>
    <string name="main_pref_toggle_controller">Micro Controller Integration</string>
    <string name="main_pref_toggle_controller_summ_on">Micro Controller Integration ENABLED</string>
    <string name="main_pref_toggle_controller_summ_off">Micro Controller Integration DISABLED</string>
    <string name="main_pref_toggle_camera">Camera Integration</string>
    <string name="main_pref_toggle_camera_summ_on">Camera Integration ENABLED</string>
    <string name="main_pref_toggle_camera_summ_off">Camera Integration DISABLED</string>
    <string name="main_pref_toggle_radio">HD Radio Integration</string>
    <string name="main_pref_toggle_radio_summ_on">HD Radio Integration ENABLED</string>
    <string name="main_pref_toggle_radio_summ_off">HD Radio Integration DISABLED</string>
    <string name="main_pref_start_on_boot_title">Start Service on Boot</string>
    <string name="main_pref_category_debug">Debugging (Requires root)</string>
    <string name="main_pref_toggle_adb">Toggle ADB</string>
    <string name="main_pref_summ_adb_on">ADB is ENABLED</string>
    <string name="main_pref_summ_adb_off">ADB is DISABLED</string>
    <string name="main_pref_toggle_adb_wireless">Wireless ADB</string>
    <string name="main_pref_summ_wireless_adb_on">Wireless ADB is ENABLED</string>
    <string name="main_pref_summ_wireless_adb_off">Wireless ADB is DISABLED</string>
    <string name="power_category_event">Power Event Settings</string>
    <string name="power_category_kernel">Kernel Settings</string>
    <string name="power_pref_screen_timeout_title">Screen Off Delay</string>
    <string name="power_pref_audio_focus_timeout_title">Audio Focus Loss Delay</string>
    <string name="power_pref_enable_ap_mode_title">Airplane Mode on Sleep</string>
    <string name="power_pref_enable_fixed_install_mode">Fixed Install Mode</string>
    <string name="power_pref_enable_fast_charge">USB Host Fast Charging</string>
    <string name="controller_category_connection">Connection Settings</string>
    <string name="controller_category_command">Command Settings</string>
    <string name="controller_category_misc">Misc Settings</string>
    <string name="controller_pref_select_device_type">Select Device Type</string>
    <string-array name="controller_pref_select_device_type_entries">
        <item>Usb</item>
        <item>Bluetooth</item>
    </string-array>
    <string-array name="controller_pref_select_device_type_values">
        <item>USB</item>
        <item>BLUETOOTH</item>
    </string-array>
    <string name="controller_pref_select_device_type_default">USB</string>
    <string name="controller_pref_select_device">Select Device</string>
    <string-array name="controller_pref_select_device_entries">
        <item>No Device Selected</item>
    </string-array>
    <string-array name="controller_pref_select_device_values">
        <item>NO_DEVICE</item>
    </string-array>
    <string name="controller_pref_select_device_summary">No Device Selected</string>
    <string name="controller_pref_select_device_default">NO_DEVICE</string>
    <string name="controller_pref_select_baud">Select Baud Rate</string>
    <string-array name="controller_pref_select_baud_entries">
        <item>1200</item>
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
        <item>460800</item>
    </string-array>
    <string name="controller_pref_edit_buttons">Launch Calibration Activity</string>
    <string name="controller_pref_edit_buttons_summary">Map Buttons / Calibrate Dimmer</string>
    <string name="controller_pref_custom_commands">Enable Custom Commands</string>
    <string name="controller_pref_custom_commands_summary">Broadcast intent when custom command is received</string>
    <string name="controller_pref_reverse_camera">Reverse Camera Command</string>
    <string name="controller_pref_use_integrated_cam">Use Integrated Camera Activity</string>
    <string-array name="controller_pref_reverse_camera_entries">
        <item>None</item>
        <item>Launch Integrated Camera Activity</item>
        <item>Launch External Camera Application</item>
    </string-array>
    <string-array name="controller_pref_reverse_camera_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="controller_pref_select_external_cam_app">Select External Camera App</string>
    <string name="controller_pref_volume_ui">Show Volume UI</string>
    <string name="camera_menu_toggle_fullscreen">Toggle Fullscreen</string>
    <string name="camera_menu_toggle_immersive">Toggle Immersive</string>
    <string name="camera_category_device_settings">Device Settings</string>
    <string name="camera_category_ui_settings">User Interface Settings</string>
    <string name="camera_pref_start_camera">Start Camera Activity</string>
    <string name="camera_pref_select_camera_device">Select Device</string>
    <string name="camera_pref_fullscreen">Fullscreen Mode</string>
    <string name="camera_pref_fullscreen_summ">Stretch image to fill the entire screen</string>
    <string name="camera_pref_immersive">Immersive Mode</string>
    <string name="camera_pref_immersive_summ">Enable to hide action/navigation bars</string>
    <string name="pref_start_service">Start Service</string>
    <string name="pref_stop_service">Stop Service</string>
    <string name="radio_pref_launch_hd_radio">Launch HD Radio Activity</string>
    <string name="radio_pref_request_audio_focus">Request Audio Focus</string>
    <string name="radio_pref_request_audio_focus_summary">Stops media playback when radio is on</string>
    <string name="radio_pref_use_media_buttons">Use Media Buttons</string>
    <string name="radio_pref_use_media_buttons_summary">Control Seek and Volume with media buttons</string>
    <string name="radio_pref_select_driver">Select Radio Driver</string>
    <string-array name="radio_driver_entries">
        <item>MJS Cable Driver</item>
        <item>Stand Alone Arduino Driver</item>
        <item>Integrated MCU Driver</item>
    </string-array>
    <string-array name="radio_driver_entry_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="title_activity_button_learning">Map Resistive Buttons</string>
    <string name="title_activity_camera">Backup Camera</string>
    <string name="dialog_controller_reading_default">[00000]</string>
    <string name="dialog_debounce_default">1</string>
    <string name="dialog_plus_minus">+/-</string>
    <string name="dialog_click_action">Click Action:</string>
    <string name="dialog_hold_action">Hold Action:</string>
    <string name="dialog_none">None</string>
    <string name="dimmer_dialog_mode_label">Dimmer Mode:</string>
    <string name="dimmer_dialog_controller_reading">Controller Reading:</string>
    <string name="dimmer_dialog_reading_label">Reading</string>
    <string name="dimmer_dialog_brightness_label">Brightness</string>
    <string name="dimmer_dialog_high_label">Dimmer High:</string>
    <string name="dimmer_dialog_low_label">Dimmer Low:</string>
    <string name="dimmer_dialog_text_not_set">Not Set</string>
    <string name="dimmer_dialog_button_start_cal">Start Calibration Wizard</string>
    <string name="dimmer_dialog_button_ok">OK</string>
    <string name="dimmer_dialog_button_finish">Finish</string>
    <string name="dimmer_dialog_calibrate_page_one">
        Turn your dimmer (headlights) OFF, then click NEXT to continue.
    </string>
    <string name="dimmer_dialog_calibrate_page_two_digital">
        Turn your headlights on.  Adjust the brightness slider
        to your night time preference.  Click FINISH to complete calibration.
    </string>
    <string name="dimmer_dialog_calibrate_page_two_analog">
        Turn your headlights on, with dimmer on its Maximum setting. Adjust the brightness slider
        to your maximum night time preference.  Click NEXT to continue.
    </string>
    <string name="dimmer_dialog_calibrate_page_three_analog">
        With your headlights still on, adjust the dimmer to its Minimum setting. Adjust the brightness slider
        to your minimum night time preference.  Click FINISH to complete calibration.
    </string>
</resources>