<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dialog_margin_vertical"
        android:layout_marginBottom="@dimen/dialog_margin_vertical"
        android:layout_marginStart="@dimen/dialog_margin_horizontal">

        <TextView
            android:text="@string/dialog_controller_reading_default"
            android:id="@+id/txt_button_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/dialog_control_space"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:text="@string/dialog_plus_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/dialog_control_space"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:text="@string/dialog_debounce_default"
            android:id="@+id/txt_debounce_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/dialog_margin_horizontal"
            android:layout_marginTop="@dimen/dialog_margin_vertical"
            android:layout_marginBottom="@dimen/dialog_margin_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/dialog_click_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:padding="@dimen/dialog_control_space"/>

                <TextView
                    android:text="@string/dialog_none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/txt_click_action"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/dialog_hold_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:padding="@dimen/dialog_control_space"/>

                <TextView
                    android:text="@string/dialog_none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/txt_hold_action"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>